fix(link): add missing color for active state (#81)

--- a/packages/stencil/components/link/src/components/osds-link/osds-link.scss
+++ b/packages/stencil/components/link/src/components/osds-link/osds-link.scss
@@ -60,6 +60,13 @@
   }
 }
 
+
+:active {
+  @include osds-link-on-text-content() {
+    transition: color ease-in-out 0s;
+  }
+}
+
 :host([disabled]) {
   cursor: not-allowed;
   opacity: .5;
